# lifemanager

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml  input.css  package-lock.json  package.json  spec.md
.claude/agents/dioxus-dev/: AGENT.md
.claude/agents/docker-ops/: AGENT.md
.claude/agents/ocr-dev/: AGENT.md
.claude/agents/uiux-designer/: AGENT.md
.claude/commands/: add-component.md  add-page.md  build.md  check.md  deploy.md  dev.md  fix-ui.md
assets/: main.css  manifest.json  sw-register.js  sw.js
docs/: 01-architecture.md  02-dioxus-fullstack.md  03-data-model.md  04-components.md  05-security.md  06-ocr-pipeline.md  07-deployment.md  08-developer-guide.md  README.md  architecture.md  dioxus-guide.md  google-calendar-sync.md  pwa-deployment.md  tesseract-ocr.md  tutorial.md
scripts/: build.sh  check.sh  deploy.sh  dev.sh  screenshot.sh
src/: cache.rs  main.rs  route.rs
src/api/: checklist.rs  cycles.rs  defaults.rs  google.rs  mod.rs  mood.rs  notifications.rs  shopee.rs  watchlist.rs
src/components/: checklist_page.rs  error_banner.rs  google_sync.rs  icons.rs  layout.rs  mod.rs  notification_bell.rs  progress_bar.rs  quick_add.rs  shopee_ocr.rs  swipe_item.rs  sync_indicator.rs  tab_bar.rs
src/models/: checklist_item.rs  cycle.rs  mod.rs  notification.rs  shopee.rs  watchlist.rs
src/pages/: groceries.rs  mod.rs  period.rs  shopee.rs  todos.rs  watch_settings.rs  watchlist.rs
src/server/: auth.rs  db.rs  google.rs  media_api.rs  mod.rs  notify.rs  validate.rs
(+6 files in other folders)
